--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <button class="number">8</button>
         <button class="number">9</button>
         <button class="number">0</button>
-        <button class="operator">+</button>
-        <button class="operator">-</button>
-        <button class="operator">x</button>
-        <button class="operator">÷</button>
-        <button id="clear">clear</button>
-        <button id="equal">Equal</button>
+        <button class="operator" id="addBtn">+</button>
+        <button class="operator" id="sbtBtn">-</button>
+        <button class="operator" id="mulBtn">x</button>
+        <button class="operator" id="divBtn">÷</button>
+        <button id="clearBtn">clear</button>
+        <button id="equalBtn">Equal</button>
     </div>
 </body>
 </html>
